# nrf52832-hal-blinky

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
