[package]
name = "nrf52832-hal-blinky"
version = "0.1.0"
authors = ["fran"]

description = "Blinky running on the Ebyte E73-TBB BLE module board (nRF52832-based)."
readme = "README.md"
edition = "2018"
keywords = ["example", "ebyte", "nrf52", "arm", "cortex-m"]
categories = ["embedded", "hardware-support", "no-std"]
[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6"
cortex-m-rt = "0.6.7"
nb = "0.1.1"
cortex-m-semihosting = "0.3.2"
nrf52832-pac = "0.9.0"
nrf52832-hal = "0.11.0"
rtt-target = "0.2.2"
panic-halt = "0.2.0"

[profile.release]
debug = true
lto = true
